@@ -66,6 +66,10 @@ iwrc iwxstr_cat(IWXSTR *xstr, const void *buf, int size) {
   return IW_OK;
 }
 
+iwrc iwxstr_cat2(IWXSTR *xstr, const char *buf) {
+  return buf ? iwxstr_cat(xstr, buf, strlen(buf)) : 0;
+}
+
 iwrc iwxstr_unshift(IWXSTR *xstr, const void *buf, int size) {
   int nsize = xstr->size + size + 1;
   if (xstr->asize < nsize) {
